<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/shape_empty_rectangle"
        android:orientation="vertical">

        <LinearLayout style="@style/login_lineStytle">

            <TextView
                style="@style/login_left_textStyle"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/login_right_editextStyle"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                android:maxLength="11" />
        </LinearLayout>

        <View style="@style/login_viewStyle" />

        <LinearLayout style="@style/login_lineStytle">

            <TextView
                style="@style/login_left_textStyle"
                android:text="@string/login_pwd" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/et_regPwd"
                    style="@style/login_right_editextStyle"
                    android:hint="@string/login_pwd_hint"
                    android:inputType="textPassword"
                    android:layout_marginRight="@dimen/dp50"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_look"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="@dimen/dp10"
                    android:button="@drawable/seek_checkbox"
                    />
            </RelativeLayout>


        </LinearLayout>

        <View style="@style/login_viewStyle" />

        <LinearLayout style="@style/login_lineStytle">

            <TextView
                style="@style/login_left_textStyle"
                android:text="@string/yan_zheng_ma" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/et_verCode"
                    style="@style/login_right_editextStyle"
                    android:hint="@string/yan_zheng_ma_hint"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/bt_getAuthCode"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="@dimen/dp35"
                    android:background="@drawable/shape_normal_button"
                    android:text="获取验证码"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size14"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp10"
                    android:src="@mipmap/login_image1"/>
            </RelativeLayout>

        </LinearLayout>
        <View style="@style/login_viewStyle" />

        <LinearLayout style="@style/login_lineStytle">

            <TextView
                style="@style/login_left_textStyle"
                android:text="@string/invite_cod" />

            <EditText
                android:id="@+id/et_inviteCode"
                style="@style/login_right_editextStyle"
                android:hint="@string/invite_code_hint"
                android:inputType="text"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dp10">
        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableLeft="@drawable/register_checkbox"
            android:checked="true"
            android:text="@string/reg_checkbox_text"
            android:textColor="@color/gray"
            android:drawablePadding="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp2"
            />
        <TextView
            android:id="@+id/tv_rgRuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_xie_yi"
            android:textColor="@color/base_color"/>
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/dp10"
            android:text="@string/reg_has_count"
            android:textColor="@color/base_color"
            android:textSize="@dimen/size16"
            android:drawableRight="@mipmap/reg_img4"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:background="@drawable/shape_normal_button"
            android:layout_margin="@dimen/dp10"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/size14"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>



</LinearLayout>